--- a/src/components/pages/favorites-image.css
+++ b/src/components/pages/favorites-image.css
@@ -13,6 +13,9 @@
         font-size: 20px;
         margin-bottom: 15px;
         font-weight: bold;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .button-container {
